--- a/src/app/core/notification/components/toast.component.html
+++ b/src/app/core/notification/components/toast.component.html
@@ -1,4 +1,4 @@
-<div class="fixed z-10 top-0 right-0 mt-20 mr-10">
+<div class="fixed z-20 top-0 right-0 mt-16 mr-3 sm:top-0 sm:right-0 sm:mt-20 sm:mr-6">
     <div id="toastContainer" class="relative max-w-fit rounded-lg ring-1 ring-white/5 bg-gradient-to-b opacity-85"
         [ngClass]="{
                 'from-emerald-600 to-emerald-700': toastData.type === toastType.SUCCESS,
