--- a/src/app/feature/home/home.component.html
+++ b/src/app/feature/home/home.component.html
@@ -1,5 +1,9 @@
 <app-section-wrapper>
   <h1 id="title">Hi, I'm <span class="text-red-500">Manu</span></h1>
+
   <p id="description" class="text-white sm:text-lg md:text-2xl">I'm a Full-Stack Software Engineer</p>
-  <app-workstation></app-workstation>
+  
+  <div class="flex flex-col items-center">
+    <app-workstation class="w-screen sm:w-full"></app-workstation>
+  </div>
 </app-section-wrapper>
