--- a/src/app/feature/work/components/employment-reference.component.html
+++ b/src/app/feature/work/components/employment-reference.component.html
@@ -1,7 +1,7 @@
 <app-section-wrapper>
     <div class="flex flex-row justify-center">
         <app-card-primary-wrapper class="w-full lg:w-8/12">
-            <div class="px-10 py-14">
+            <div class="px-5 py-7 sm:px-10 sm:py-14">
                 <p id="smallTitle" class="text-white">WHAT OTHERS SAY</p>
 
                 <h2 id="title" class="text-white">Employment References.</h2>
