--- a/src/app/feature/contact/components/contact.component.html
+++ b/src/app/feature/contact/components/contact.component.html
@@ -1,7 +1,7 @@
 <app-section-wrapper>
     <div class="relative flex flex-col-reverse justify-between items-center 2xl:flex-row 2xl:justify-around gap-y-20 md:gap-y-48">
-        <app-universe class="absolute w-screen h-full scale-y-150 -translate-y-1/4 -z-10"></app-universe>
-        <app-contact-editor class="w-full xl:w-10/12 2xl:w-5/12 mb-20 md:mb-48"></app-contact-editor>
-        <app-planet-earth class="w-full scale-110 2xl:scale-100 2xl:w-7/12"></app-planet-earth>
+        <app-universe class="absolute w-screen h-full scale-y-150 -translate-y-1/4 -z-20"></app-universe>
+        <app-contact-editor class="w-full xl:w-10/12 2xl:w-5/12 mb-20 md:mb-48 z-10"></app-contact-editor>
+        <app-planet-earth class="w-screen 2xl:scale-150 2xl:w-7/12"></app-planet-earth>
     </div>
 </app-section-wrapper>
