--- a/src/app/feature/work/components/employment-reference-carousel.component.html
+++ b/src/app/feature/work/components/employment-reference-carousel.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col items-center space-y-4">
     <div class="grid grid-cols-[0.1fr_1fr_0.1fr] justify-items-center items-center">
         <!--  Previous Button -->
-        <div class="fa-stack fa-2x translate-x-10">
+        <div class="fa-stack fa-2x translate-x-10 cursor-pointer">
             <i class="fa-solid fa-circle fa-stack-1x text-6xl text-red-500"></i>
             <i id="previousButton" 
                 class="fa-solid fa-circle-arrow-left fa-stack-1x text-6xl text-white hover:scale-110 transition duration-150 ease-in-out"
@@ -15,7 +15,7 @@
                 <div id="employmentReferenceCard" class="px-12 py-12">
                     <p id="quote" class="text-4xl font-bold text-red-500">"</p>
 
-                    <p id="employmentReferenceText" class="text-white text-base mt-5">{{ employmentReference.reference }}</p>
+                    <p id="employmentReferenceText" class="text-white sm:text-base mt-5">{{ employmentReference.reference }}</p>
 
                     <div class="flex flex-row justify-end items-center space-x-4 mt-4">
                         <p id="institution" class="text-red-500">{{"@"}}{{ employmentReference.institution }}</p>
@@ -28,7 +28,7 @@
         }
 
         <!--  Next Button -->
-        <div class="fa-stack fa-2x -translate-x-10">
+        <div class="fa-stack fa-2x -translate-x-10 cursor-pointer">
             <i class="fa-solid fa-circle fa-stack-1x text-6xl text-red-500"></i>
             <i id="nextButton" 
                 class="fa-solid fa-circle-arrow-right fa-stack-1x text-6xl text-white hover:scale-110 transition duration-150 ease-in-out"
