feat: animate about section

--- a/src/app/feature/about/components/about.component.html
+++ b/src/app/feature/about/components/about.component.html
@@ -1,7 +1,7 @@
 <app-section-wrapper>
-  <p id="smallTitle">INTRODUCTION</p>
+  <p id="overviewSmallTitle">INTRODUCTION</p>
 
-  <h2 id="title">Overview.</h2>
+  <h2 id="overviewTitle">Overview.</h2>
 
   <p id="overviewText" class="md:w-3/4 lg:w-2/3 xl:w-1/2">
     I am a Full-Stack Software Engineer with hands-on experience in developing
