feat: animate experience timeline icons
- refactor move gsap animations to their respective components

--- a/src/app/feature/work/components/employment-reference.component.html
+++ b/src/app/feature/work/components/employment-reference.component.html
@@ -2,9 +2,9 @@
     <div class="flex flex-row justify-center">
         <app-card-primary-wrapper class="w-full lg:w-8/12">
             <div class="px-5 py-7 sm:px-10 sm:py-14">
-                <p id="smallTitle" class="text-white">WHAT OTHERS SAY</p>
+                <p id="employmentReferencesSmallTitle" class="text-white">WHAT OTHERS SAY</p>
 
-                <h2 id="title" class="text-white">Employment References.</h2>
+                <h2 id="employmentReferencesTitle" class="text-white">Employment References.</h2>
 
                 <app-employment-reference-carousel></app-employment-reference-carousel>
             </div>
