--- a/src/app/feature/work/components/employment-reference-carousel.component.html
+++ b/src/app/feature/work/components/employment-reference-carousel.component.html
@@ -1,17 +1,16 @@
 <div class="flex flex-col items-center space-y-4">
     <div class="grid grid-cols-[0.1fr_1fr_0.1fr] justify-items-center items-center">
         <!--  Previous Button -->
-        <div class="fa-stack fa-2x translate-x-10 cursor-pointer">
-            <i class="fa-solid fa-circle fa-stack-1x text-6xl text-red-500"></i>
-            <i id="previousButton" 
-                class="fa-solid fa-circle-arrow-left fa-stack-1x text-6xl text-white hover:scale-110 transition duration-150 ease-in-out"
-                (click)="onPrevClick()"
-            ></i>
-        </div>
+        <button id="previousButton" class="z-10" (click)="onPrevClick()" [disabled]="isButtonDisabled">
+            <div class="fa-stack fa-2x translate-x-10">
+                <i class="fa-solid fa-circle fa-stack-1x text-6xl text-red-500"></i>
+                <i id="previousIcon" class="fa-solid fa-circle-arrow-left fa-stack-1x text-6xl text-white hover:scale-110 transition duration-150 ease-in-out"></i>
+            </div>
+        </button>
 
         <!--  Reference Card -->
         @for(employmentReference of employmentReferences; track employmentReference; let idx =$index) {
-            <app-card-secondary-wrapper [ngClass]="{'hidden': currentIndex !== idx, 'block': currentIndex === idx }">
+            <app-card-secondary-wrapper id="employmentReferenceCardContainer" [ngClass]="{'hidden': currentIndex !== idx, 'block': currentIndex === idx }">
                 <div id="employmentReferenceCard" class="px-12 py-12">
                     <p id="quote" class="text-4xl font-bold text-red-500">"</p>
 
@@ -28,26 +27,26 @@
         }
 
         <!--  Next Button -->
-        <div class="fa-stack fa-2x -translate-x-10 cursor-pointer">
-            <i class="fa-solid fa-circle fa-stack-1x text-6xl text-red-500"></i>
-            <i id="nextButton" 
-                class="fa-solid fa-circle-arrow-right fa-stack-1x text-6xl text-white hover:scale-110 transition duration-150 ease-in-out"
-                (click)="onNextClick()"
-            ></i>
-        </div>
+        <button id="nextButton" class="z-10" (click)="onNextClick()" [disabled]="isButtonDisabled">
+            <div class="fa-stack fa-2x -translate-x-10">
+                <i class="fa-solid fa-circle fa-stack-1x text-6xl text-red-500"></i>
+                <i id="nextIcon" class="fa-solid fa-circle-arrow-right fa-stack-1x text-6xl text-white hover:scale-110 transition duration-150 ease-in-out"></i>
+            </div>
+        </button>
     </div>
 
     <!--  Dots / Indicator -->
-    <div class="flex flex-row items-center space-x-2">
+    <div id="dotsIndicatorContainer" class="flex flex-row items-center space-x-2">
         @for(employmentReference of employmentReferences; track employmentReference; let idx =$index) {
-            <div id="dot" class="rounded-full" 
+            <button id="dot" class="rounded-full" 
                 [ngClass]="
                     {
                         'bg-stone-900 w-2 h-2 hover:scale-150 transition duration-150 ease-in-out': currentIndex !== idx, 
                         'w-3 h-3 bg-white': currentIndex === idx,
                     }"
                 (click)="onSelectedClick(idx)"
-            ></div>
+                [disabled]="isButtonDisabled"
+            ></button>
         }
     </div>
 </div>
