--- a/src/app/core/header/nav-bar.component.scss
+++ b/src/app/core/header/nav-bar.component.scss
@@ -1,13 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 #menuButton {
-  position: relative;
-  width: 4rem;
-  height: 3rem;
-  cursor: pointer;
+  @apply relative;
+  @apply w-14;
+  @apply h-12;
+  @apply cursor-pointer;
 }
 
 #menuButton:hover {
@@ -15,12 +10,12 @@
 }
 
 #icon {
-  position: absolute;
-  top: 0;
-  right: 1rem;
-  left: 1rem;
-  width: auto;
-  height: 100%;
+  @apply absolute;
+  @apply top-0;
+  @apply right-4;
+  @apply left-4;
+  @apply w-auto;
+  @apply h-full;
 }
 
 /* MENU ICON */
@@ -28,35 +23,35 @@
 .lines,
 .lines:before,
 .lines:after {
-  position: absolute;
-  display: block;
-  width: 100%;
-  left: 0;
-  background: #FFFFFF;
-  transition: 0.3s;
+  @apply absolute;
+  @apply block;
+  @apply w-full;
+  @apply left-0;
+  @apply bg-white;
+  @apply duration-300;
 }
 
 .lines {
-  height: 3px;
-  margin-top: -2px;
-  top: 50%;
+  @apply h-[0.2rem];
+  @apply -mt-0.5;
+  @apply top-1/2;
 }
 
 .lines:before,
 .lines:after {
   content: '';
-  height: 100%;
+  @apply h-full;
 
   /* Try different values here: .25rem, .5rem, .2rem, 5rem, 10rem... */
-  transform-origin: 5rem center;
+  transform-origin: .5rem center;
 }
 
 .lines:before {
-  top: 8px;
+  @apply top-2;
 }
 
 .lines:after {
-  top: -8px;
+  @apply -top-2;
 }
 
 /* CLOSE ICON */
@@ -66,12 +61,12 @@
 }
 
 .close .lines {
-	background: transparent;
+    @apply bg-transparent;
 }
 
 .close .lines:before,
 .close .lines:after {
-  top: 0;
+  @apply top-0;
   transform-origin: 50% 50%;
 }
 
