feat: add background image for skills section

--- a/src/app/feature/work/components/skills.component.html
+++ b/src/app/feature/work/components/skills.component.html
@@ -1,4 +1,6 @@
 <app-section-wrapper>
+    <img class="absolute -z-20 opacity-50 hidden xl:block" src="{{ backGroundImage.srcImage }}" alt="{{ backGroundImage.alt }}"/>
+
     <p id="skillsSmallTitle">THE TECHNOLOGIES I HAVE WORKED WITH SO FAR</p>
 
     <h2 id="skillsTitle">Skills.</h2>
