feat: remove `WorkStationComponent`

--- a/src/app/feature/home/home.component.html
+++ b/src/app/feature/home/home.component.html
@@ -6,6 +6,6 @@
   <p id="homeDescription" class="text-white sm:text-lg md:text-2xl"><span id="animatedText" #animatedTextRef></span><span id="cursor" class="text-red-500">|</span></p>
   
   <div class="flex-col items-center">
-    <app-workstation class="w-screen sm:w-full"></app-workstation>
+    <!-- <app-workstation class="w-screen sm:w-full"></app-workstation> -->
   </div>
 </app-section-wrapper>
