--- a/src/app/feature/work/components/employment-reference-carousel.component.html
+++ b/src/app/feature/work/components/employment-reference-carousel.component.html
@@ -1,8 +1,8 @@
 <div class="flex flex-col items-center space-y-4">
-    <div class="grid grid-cols-[0.1fr_1fr_0.1fr] justify-items-center items-center">
+    <div class="grid grid-cols-[0.1fr_1fr_0.1fr] items-center">
         <!--  Previous Button -->
-        <button id="previousButton" class="z-10" (click)="onPrevClick()" [disabled]="isButtonDisabled">
-            <div class="fa-stack fa-2x translate-x-10">
+        <button id="previousButton" class="z-10 translate-x-10" (click)="onPrevClick()" [disabled]="isButtonDisabled">
+            <div class="fa-stack fa-2x">
                 <i class="fa-solid fa-circle fa-stack-1x text-6xl text-red-500"></i>
                 <i id="previousIcon" class="fa-solid fa-circle-arrow-left fa-stack-1x text-6xl text-white hover:scale-110 transition duration-150 ease-in-out"></i>
             </div>
@@ -27,8 +27,8 @@
         }
 
         <!--  Next Button -->
-        <button id="nextButton" class="z-10" (click)="onNextClick()" [disabled]="isButtonDisabled">
-            <div class="fa-stack fa-2x -translate-x-10">
+        <button id="nextButton" class="z-10 -translate-x-10" (click)="onNextClick()" [disabled]="isButtonDisabled">
+            <div class="fa-stack fa-2x">
                 <i class="fa-solid fa-circle fa-stack-1x text-6xl text-red-500"></i>
                 <i id="nextIcon" class="fa-solid fa-circle-arrow-right fa-stack-1x text-6xl text-white hover:scale-110 transition duration-150 ease-in-out"></i>
             </div>
@@ -50,4 +50,3 @@
         }
     </div>
 </div>
-
