--- a/src/app/feature/work/components/employment-reference-carousel.component.html
+++ b/src/app/feature/work/components/employment-reference-carousel.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col items-center space-y-4">
-    <div class="grid grid-cols-[0.1fr_1fr_0.1fr] items-center">
+    <div class="md:grid md:grid-cols-[0.1fr_1fr_0.1fr] items-center">
         <!--  Previous Button -->
-        <button id="previousButton" class="z-10 translate-x-10" (click)="onPrevClick()" [disabled]="isButtonDisabled">
+        <button id="previousButton" class="hidden md:block z-10 translate-x-10" (click)="onPrevClick()" [disabled]="isButtonDisabled">
             <div class="fa-stack fa-2x">
                 <i class="fa-solid fa-circle fa-stack-1x text-6xl text-red-500"></i>
                 <i id="previousIcon" class="fa-solid fa-circle-arrow-left fa-stack-1x text-6xl text-white hover:scale-110 transition duration-150 ease-in-out"></i>
@@ -27,7 +27,7 @@
         }
 
         <!--  Next Button -->
-        <button id="nextButton" class="z-10 -translate-x-10" (click)="onNextClick()" [disabled]="isButtonDisabled">
+        <button id="nextButton" class="hidden md:block z-10 -translate-x-10" (click)="onNextClick()" [disabled]="isButtonDisabled">
             <div class="fa-stack fa-2x">
                 <i class="fa-solid fa-circle fa-stack-1x text-6xl text-red-500"></i>
                 <i id="nextIcon" class="fa-solid fa-circle-arrow-right fa-stack-1x text-6xl text-white hover:scale-110 transition duration-150 ease-in-out"></i>
