feat: hide logo for small devices only

--- a/src/app/feature/work/components/employment-reference-carousel.component.html
+++ b/src/app/feature/work/components/employment-reference-carousel.component.html
@@ -18,7 +18,7 @@
 
                     <div class="flex flex-row justify-end items-center space-x-4 mt-4">
                         <p id="institution" class="text-red-500">{{"@"}}{{ employmentReference.institution }}</p>
-                        <div class="hidden lg:flex lg:flex-row justify-center items-center w-12 h-12 px-2 py-2 bg-white rounded-full border-2 border-red-500">
+                        <div class="hidden sm:flex sm:flex-row justify-center items-center w-12 h-12 px-2 py-2 bg-white rounded-full border-2 border-red-500">
                             <img id="logo" src="{{ employmentReference.logo.srcImage }}" alt="{{ employmentReference.logo.alt }}">
                         </div>
                     </div>
