feat: improve style

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,7 +19,7 @@
     }
 
     h2 {
-        @apply text-lg;
+        @apply text-xl;
         @apply sm:text-2xl;
         @apply md:text-4xl;
         @apply font-bold;
