--- a/src/app/feature/work/components/skills.component.html
+++ b/src/app/feature/work/components/skills.component.html
@@ -5,6 +5,6 @@
 
     <h2 id="skillsTitle">Skills.</h2>
 
-    <app-technology-orb></app-technology-orb>
+    <app-technology-orbs></app-technology-orbs>
 
 </app-section-wrapper>
