fix: fix lint errors
- fix lint errors
- clean ups

--- a/frontend/src/app/core/header/nav-bar.component.html
+++ b/frontend/src/app/core/header/nav-bar.component.html
@@ -1,9 +1,9 @@
 <div class="fixed w-screen z-20 bg-gradient-to-b from-stone-800 to-stone-900 opacity-95">
     <div class="flex flex-row justify-between sm:justify-around mx-5 sm:mx-20 md:mx-5">
-        <div id="logoNameOccupationContainer" class="flex gap-3 items-center cursor-pointer" (click)="onLogoNameOccupationClick()">
+        <button id="logoNameOccupationContainer" class="flex gap-3 items-center" (click)="onLogoNameOccupationClick()">
             <img id="logo" class="w-12 h-12 md:w-14 md:h-14" src="{{ logo.srcImage }}" alt="{{ logo.alt }}">
             <p id="nameOccupation" class="text-base font-bold">Manu&nbsp;<span class="md:inline hidden">|&nbsp;Full-Stack Software Engineer</span></p>
-        </div>
+        </button>
         <nav class="sm:block hidden content-center">
             <ul class="flex gap-10 text-white font-medium">
                 <li class="hover:text-red-500 hover:underline hover:decoration-2 hover:underline-offset-8 hover:scale-110 transition duration-150 ease-in-out"><a id="navAbout" routerLink="/" fragment="about">About</a></li>
@@ -12,18 +12,18 @@
             </ul>
         </nav>
         <div id="dropdownMenu" class="sm:hidden flex items-center relative">
-            <div id="menuButton" (click)="onDropdownMenuClick()">
+            <button id="menuButton" (click)="onDropdownMenuClick()">
                 <div id="icon" [ngClass]="{'close': this.isSelected}">
                     <span class="lines"></span>
                 </div>
-            </div>
+            </button>
             @if (isSelected) {
                 <div id="dropDownOptionContainer" #dropDownOptionContainerRef class="absolute top-0 right-0 mt-14 bg-gradient-to-b from-stone-800 to-stone-900 opacity-95 rounded-md shadow-lg ring-1 ring-black/5" tabindex="-1">
-                    <div class="flex flex-col py-1 text-white font-medium" (click)="onDropdownMenuClick()">
+                    <button class="flex flex-col py-1 text-white font-medium" (click)="onDropdownMenuClick()">
                         <a routerLink="/" fragment="about" class="px-6 py-3 hover:bg-red-500 hover:scale-110 transition duration-150 ease-in-out" tabindex="-1" id="aboutMenuItem">About</a>
                         <a routerLink="/" fragment="work" class="px-6 py-3 hover:bg-red-500 hover:scale-110 transition duration-150 ease-in-out" tabindex="-1" id="workMenuItem">Work</a>
                         <a routerLink="/" fragment="contact" class="px-6 py-3 hover:bg-red-500 hover:scale-110 transition duration-150 ease-in-out" tabindex="-1" id="contactMenuItem">Contact</a>
-                    </div>
+                    </button>
                 </div>
             } 
     </div>
