--- a/frontend/src/app/feature/work/components/project-card.component.html
+++ b/frontend/src/app/feature/work/components/project-card.component.html
@@ -9,7 +9,12 @@
             </div>
         </a>
 
-        <img id="image" class="rounded-lg ring-1 ring-black/5" (touchstart)="onTouch()" (mouseover)="onMouseOver()" (mouseleave)="onMouseLeave()" src="{{ imageSource }}" alt="{{ project.title }} img"/>
+        <img id="image"
+            class="rounded-lg ring-1 ring-black/5"
+            (touchstart)="onTouch()"
+            (mouseover)="onMouseOver()" (focus)="onMouseOver()"
+            (mouseleave)="onMouseLeave()" (blur)="onMouseLeave()"
+            src="{{ imageSource }}" alt="{{ project.img?.alt }}"/>
 
         <p id="description" class="mt-4">{{ project.description }}</p>
 
