--- a/frontend/src/app/core/notification/components/toast.component.html
+++ b/frontend/src/app/core/notification/components/toast.component.html
@@ -19,10 +19,10 @@
             <div id="message">{{ toastData.message }}</div>
         </div>
 
-        <div id="closeToastIcon" (click)="onCloseButtonClick()" class="fa-stack fa-1x mt-3">
+        <button id="closeToastIcon" (click)="onCloseButtonClick()" class="fa-stack fa-1x mt-3">
             <i id="faSquare" class="fa-solid fa-square fa-stack-1x text-2xl text-white"></i>
             <i id="faSquareXmark" class="fa-solid fa-square-xmark fa-stack-1x text-red-500 text-2xl hover:scale-110 transition duration-150 ease-in-out"></i>
-        </div>
+        </button>
     </div>
     <div id="progressBar" class="progress-bar absolute bg-green-500 h-1 w-full"></div>
     <div id="progressBarBackground" class="absolute -z-10 bg-white h-1 w-full"></div>
